fix missing space above picture in accordion box

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ p {
 }
 
 .accordion-body {
-    padding-top:  0rem;
+    padding-top:  1rem;
     padding-bottom:  1rem;
     margin-top:  0;
 }
